--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kffein-elixir-sprity",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Laravel Elixir wrapper around sprity Gulp task.",
   "main": "index.js",
   "scripts": {
@@ -12,13 +12,21 @@
     "elixir",
     "sprity"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KFFEIN/kffein-elixir-sprity"
+  },
+  "homepage": "https://github.com/KFFEIN/kffein-elixir-sprity",
+  "bugs": {
+    "url": "https://github.com/KFFEIN/kffein-elixir-sprity/issues"
+  },
   "author": "Kffein",
   "license": "MIT",
   "dependencies": {
 		"sprity": "latest",
     "sprity-gm": "latest",
     "gulp-if": "latest",
-    "kffein-sprity-stylus": "resources/gulp/kffein-sprity-stylus",
+    "kffein-sprity-stylus": "latest",
     "underscore": "latest"
   }
 }
