--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kffein-elixir-sprity",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Laravel Elixir wrapper around sprity Gulp task.",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "sprity-gm": "latest",
     "gulp-if": "latest",
     "kffein-sprity-stylus": "latest",
+    "sprity-sass": "latest",
     "underscore": "latest"
   }
 }
